--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "./bin/start"
   },
   "engines": {
-    "node": "5.x",
-    "npm": "2.x"
+    "node": "6.x",
+    "npm": "3.x"
   },
   "repository": {
     "type": "git",
@@ -25,12 +25,46 @@
     "url": "https://github.com/hull-ships/hull-nutshell/issues"
   },
   "homepage": "https://github.com/hull-ships/hull-nutshell",
+
+
+  "scripts": {
+    "build": "npm run clean && npm run build:server",
+    "build:server": "./node_modules/.bin/babel server -d lib",
+    "start": "node ./lib",
+    "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon -V -w server -x ./node_modules/.bin/babel-node -- server",
+    "test": "npm run test:lint",
+    "test:lint": "./node_modules/.bin/eslint server",
+    "test:modules": "npm outdated --depth=0",
+    "clean": "./node_modules/.bin/rimraf dist; ./node_modules/.bin/rimraf lib",
+    "update": "./node_modules/.bin/updtr",
+    "postinstall": "npm run build"
+  },
+  "keywords": [
+    "hull",
+    "ship",
+    "nutshell",
+    "hull-ship"
+  ],
   "dependencies": {
-    "babel": "^5.8.3",
-    "express": "^4.13.1",
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "rimraf": "^2.5.4",
+    "express": "^4.14.0",
+    "hull": "^0.9.6",
     "hogan.js": "^3.0.2",
-    "hull": "0.9.3",
-    "lodash": "^3.10.0",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "lodash": "^4.14.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
+    "babel-register": "^6.11.6",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-plugin-import": "^1.9.2",
+    "nodemon": "^1.9.2",
+    "updtr": "^0.1.15",
+    "webpack": "^1.13.1"
   }
 }
