--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "rimraf": "^2.5.4",
     "express": "^4.14.0",
-    "hull": "^0.9.6",
+    "hull": "0.9.7",
     "hogan.js": "^3.0.2",
     "request": "^2.72.0",
     "lodash": "^4.14.1"
