--- a/package.json
+++ b/package.json
@@ -4,30 +4,6 @@
   "description": "Hull Nutshell CRM integration",
   "main": "index.js",
   "scripts": {
-    "start": "./bin/start"
-  },
-  "engines": {
-    "node": "6.x",
-    "npm": "3.x"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hull-ships/hull-nutshell.git"
-  },
-  "keywords": [
-    "hull",
-    "nutshell",
-    "crm"
-  ],
-  "author": "Hull",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/hull-ships/hull-nutshell/issues"
-  },
-  "homepage": "https://github.com/hull-ships/hull-nutshell",
-
-
-  "scripts": {
     "build": "npm run clean && npm run build:server",
     "build:server": "./node_modules/.bin/babel server -d lib",
     "start": "node ./lib",
@@ -39,22 +15,38 @@
     "update": "./node_modules/.bin/updtr",
     "postinstall": "npm run build"
   },
+  "engines": {
+    "node": "6.x",
+    "npm": "3.x"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hull-ships/hull-nutshell.git"
+  },
   "keywords": [
     "hull",
     "ship",
     "nutshell",
     "hull-ship"
   ],
+  "author": "Hull",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/hull-ships/hull-nutshell/issues"
+  },
+  "homepage": "https://github.com/hull-ships/hull-nutshell",
   "dependencies": {
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
-    "rimraf": "^2.5.4",
+    "bluebird": "^3.4.6",
+    "bottleneck": "^1.13.1",
     "express": "^4.14.0",
-    "hull": "0.9.7",
     "hogan.js": "^3.0.2",
+    "hull": "0.9.7",
+    "lodash": "^4.14.1",
     "request": "^2.72.0",
-    "lodash": "^4.14.1"
+    "rimraf": "^2.5.4"
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
