--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run clean && npm run build:server",
     "build:server": "./node_modules/.bin/babel server -d lib",
-    "start": "node ./lib",
+    "start": "node -r newrelic ./lib",
     "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon -V -w server -x ./node_modules/.bin/babel-node -- server",
     "test": "npm run test:lint",
     "test:lint": "./node_modules/.bin/eslint server",
@@ -36,9 +36,9 @@
   },
   "homepage": "https://github.com/hull-ships/hull-nutshell",
   "dependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bluebird": "^3.4.6",
     "bottleneck": "^1.13.1",
     "express": "^4.14.0",
@@ -46,16 +46,17 @@
     "hull": "0.11.6",
     "lodash": "^4.14.1",
     "lru-cache": "^4.1.1",
+    "newrelic": "^2.3.1",
     "request": "^2.72.0",
     "rimraf": "^2.5.4"
   },
   "devDependencies": {
-    "babel-core": "^6.11.4",
-    "babel-eslint": "^6.1.2",
-    "babel-register": "^6.11.6",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb-base": "^3.0.1",
-    "eslint-plugin-import": "^1.9.2",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-register": "^6.26.0",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "nodemon": "^1.9.2",
     "updtr": "^0.1.15",
     "webpack": "^1.13.1"
