--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
     "build": "npm run clean && npm run build:server",
     "build:server": "./node_modules/.bin/babel server -d lib",
     "start": "node -r newrelic ./lib",
-    "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon -V -w server -x ./node_modules/.bin/babel-node -- server",
-    "test": "npm run test:lint",
+    "start:dev": "NODE_ENV=development babel-watch -L server",
+    "test": "npm run test:lint && npm run test:flow && npm run test:integration && npm run test:unit",
+    "test:unit": "NODE_ENV=test jest ./test/unit",
+    "test:integration": "NODE_ENV=test jest ./test/integration",
+    "test:flow": "flow check",
     "test:lint": "./node_modules/.bin/eslint server",
+    "test:manifest": "jsonlint manifest.json -q",
     "test:modules": "npm outdated --depth=0",
     "clean": "./node_modules/.bin/rimraf dist; ./node_modules/.bin/rimraf lib",
     "update": "./node_modules/.bin/updtr",
     "postinstall": "npm run build"
   },
   "engines": {
-    "node": "6.x",
-    "npm": "3.x"
+    "node": "8.9.x",
+    "npm": "5.5.x",
+    "yarn": "1.3.x"
   },
   "repository": {
     "type": "git",
@@ -37,28 +42,55 @@
   "homepage": "https://github.com/hull-ships/hull-nutshell",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "bluebird": "^3.4.6",
-    "bottleneck": "^1.13.1",
-    "express": "^4.14.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
+    "bluebird": "^3.5.1",
+    "bottleneck": "^1.16.0",
+    "cache-manager": "^2.5.0",
+    "express": "^4.16.2",
     "hogan.js": "^3.0.2",
-    "hull": "0.11.6",
-    "lodash": "^4.14.1",
+    "hull": "^0.13.6",
+    "jayson": "^2.0.4",
+    "json-rpc2": "^1.0.2",
+    "lodash": "^4.17.4",
     "lru-cache": "^4.1.1",
-    "newrelic": "^2.3.1",
+    "newrelic": "^2.4.1",
     "request": "^2.72.0",
     "rimraf": "^2.5.4"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-register": "^6.26.0",
-    "eslint": "^4.9.0",
+    "babel-eslint": "^8.0.2",
+    "babel-jest": "^21.2.0",
+    "babel-watch": "^2.0.7",
+    "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "flow-bin": "^0.59.0",
+    "jest": "^21.2.1",
+    "jsonlint": "^1.6.2",
+    "nock": "^9.1.3",
     "nodemon": "^1.9.2",
     "updtr": "^0.1.15",
     "webpack": "^1.13.1"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageThreshold": {
+      "global": {
+        "branches": 50,
+        "functions": 50,
+        "lines": 50,
+        "statements": 50
+      }
+    },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/test/"
+    ],
+    "transform": {
+      "^.+\\.js?$": "babel-jest"
+    }
   }
 }
