--- a/.eslintrc
+++ b/.eslintrc
@@ -1,21 +1,51 @@
 {
   "parser": "babel-eslint",
-  "globals": {},
+  "globals": { },
   "env": {
-    "es6": true
+    "es6": true,
+    "jest": true
   },
   "rules": {
-    "comma-dangle": [0],
-    "max-len": [0],
-    "camelcase": [0],
-    "quotes": [2, "double"],
-    "prefer-arrow-callback": [0],
-    "new-cap": [0],
-    "no-underscore-dangle": [0],
-    "arrow-body-style" : [0],
-    "no-param-reassign" : [0],
-    "no-console": [0],
-    "eqeqeq": [1]
+    "comma-dangle": [
+      0
+    ],
+    "max-len": [
+      0
+    ],
+    "camelcase": [
+      0
+    ],
+    "quotes": [
+      2,
+      "double"
+    ],
+    "prefer-arrow-callback": [
+      0
+    ],
+    "new-cap": [
+      0
+    ],
+    "no-underscore-dangle": [
+      0
+    ],
+    "arrow-body-style": [
+      0
+    ],
+    "no-param-reassign": [
+      0
+    ],
+    "no-console": [
+      0
+    ],
+    "eqeqeq": [
+      1
+    ],
+    "class-methods-use-this": [
+      0
+    ],
+    "arrow-parens": [
+      0
+    ]
   },
-  "extends": "airbnb-base"
+  "extends": ["airbnb-base"]
 }
