Additional actions and refactoring

--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
   "name" : "Nutshell",
-  "tags": ["outgoing","batch", "oneColumn"],
+  "tags": ["outgoing","batch", "oneColumn", "smart-notifier"],
   "description" : "Send Users as Leads or Contacts to Nutshell with custom mappings",
-  "version" : "0.2.0",
+  "version" : "0.3.0",
   "picture": "picture.png",
   "ui": false,
   "readme" : "readme.md",
   "settings" : [ ],
   "private_settings" : [
     {
-      "name": "credentials_hero",
+      "name": "authentication_title",
       "title": "Authentication",
       "format": "title",
       "type": "string"
@@ -28,7 +28,13 @@
       "name": "form_api_url",
       "title" : "Nutshell Form API url",
       "type": "string",
-      "required" : true
+      "format" : "hidden"
+    },
+    {
+      "name": "configuration_title",
+      "title": "Configuration",
+      "format": "title",
+      "type": "string"
     },
     {
       "name": "synchronized_segments",
@@ -42,38 +48,95 @@
       "default": []
     },
     {
-      "name" : "mapping",
-      "title" : "Fields Mapping",
-      "type" : "array",
-      "default" : [
-        { "hull" : "name", "nutshell" : "contact.name", "is_required" : true },
-        { "hull" : "email", "nutshell" : "contact.email", "is_required" : true }
+      "name": "accountsync_title",
+      "title": "Accounts Data Mapping",
+      "format": "title",
+      "type": "string"
+    },
+    {
+      "name": "account_sync_enable",
+      "title": "Account synchronization",
+      "type": "boolean",
+      "description": "Enable synchronization of Hull accounts with Nutshell"
+    },
+    {
+      "name": "account_attributes_outbound",
+      "title": "Send Account Attributes to Nutshell",
+      "description": "Specify all fields to send",
+      "type": "array",
+      "format": "table",
+      "default": [
+        { "hull_field_name": "account.name", "nutshell_field_name": "name" }
       ],
-      "items" : {
-        "type" : "object",
-        "properties" : {
-          "hull" : {
+      "items": {
+        "type": "object",
+        "properties": {
+          "hull_field_name" : {
             "type" : "string",
-            "format" : "template",
-            "title" : "Hull Field"
+            "format" : "accountTrait",
+            "title" : "Hull Attribute"
           },
-          "nutshell" : {
+          "nutshell_field_name" : {
             "type" : "string",
-            "title" : "Nutshell Field"
-          },
-          "is_required" : {
-            "title" : "Is required",
-            "description" : "Skip sync if this field is not defined",
-            "type" : "boolean"
+            "title" : "Nutshell Field",
+            "format" : "select",
+            "options" : {
+              "loadOptions" : "/fields-account"
+            }
           }
         },
         "required" : [
-          "hull",
-          "nutshell",
-          "is_required"
+          "hull_field_name",
+          "nutshell_field_name"
         ]
-      }
+      } 
+    },
+    {
+      "name": "contactsync_title",
+      "title": "Contacts Data Mapping",
+      "format": "title",
+      "type": "string"
+    },
+    {
+      "name": "contact_attributes_outbound",
+      "title": "Send Contact Attributes to Nutshell",
+      "description": "Specify all fields to send",
+      "type": "array",
+      "format": "table",
+      "default": [
+        { "hull_field_name": "name", "nutshell_field_name": "name" },
+        { "hull_field_name": "email", "nutshell_field_name": "email"}
+      ],
+      "items": {
+        "type": "object",
+        "properties": {
+          "hull_field_name" : {
+            "type" : "string",
+            "format" : "trait",
+            "title" : "Hull Attribute"
+          },
+          "nutshell_field_name" : {
+            "type" : "string",
+            "title" : "Nutshell Field",
+            "format" : "select",
+            "options" : {
+              "loadOptions" : "/fields-contact"
+            }
+          }
+        },
+        "required" : [
+          "hull_field_name",
+          "nutshell_field_name"
+        ]
+      } 
     }
   ],
-  "subscriptions" : [ { "url" : "/notify" } ]
+  "schedules": [
+    {
+      "url": "/status",
+      "type": "cron",
+      "value": "*/30 * * * *"
+    }
+  ],
+  "subscriptions" : [ { "url" : "/smart-notifier" } ]
 }
