--- a/package.json
+++ b/package.json
@@ -5,18 +5,16 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run clean && npm run build:server",
-    "build:server": "./node_modules/.bin/babel server -d lib",
-    "start": "node -r newrelic ./lib",
-    "start:dev": "NODE_ENV=development babel-watch -L server",
+    "build:server": "babel server -d build",
+    "clean": "rimraf build",
     "test": "npm run test:lint && npm run test:flow && npm run test:integration && npm run test:unit",
     "test:unit": "NODE_ENV=test jest ./test/unit",
     "test:integration": "NODE_ENV=test jest ./test/integration",
     "test:flow": "flow check",
     "test:lint": "./node_modules/.bin/eslint server",
     "test:manifest": "jsonlint manifest.json -q",
-    "test:modules": "npm outdated --depth=0",
-    "clean": "./node_modules/.bin/rimraf dist; ./node_modules/.bin/rimraf lib",
-    "update": "./node_modules/.bin/updtr",
+    "start": "node -r newrelic build",
+    "start:dev": "NODE_ENV=development babel-watch -L server",
     "postinstall": "npm run build"
   },
   "engines": {
@@ -49,6 +47,7 @@
     "bluebird": "^3.5.1",
     "bottleneck": "^1.16.0",
     "cache-manager": "^2.5.0",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "hogan.js": "^3.0.2",
     "hull": "^0.13.6",
@@ -58,7 +57,7 @@
     "lru-cache": "^4.1.1",
     "newrelic": "^2.4.1",
     "request": "^2.72.0",
-    "rimraf": "^2.5.4"
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
@@ -66,13 +65,16 @@
     "babel-watch": "^2.0.7",
     "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-flowtype": "^2.39.1",
+    "eslint-plugin-flowtype-errors": "^3.3.6",
     "eslint-plugin-import": "^2.8.0",
     "flow-bin": "^0.59.0",
+    "flow-typed": "^2.2.3",
+    "hull-connector-tester": "^0.0.1",
     "jest": "^21.2.1",
     "jsonlint": "^1.6.2",
     "nock": "^9.1.3",
-    "nodemon": "^1.9.2",
-    "updtr": "^0.1.15",
+    "rimraf": "^2.5.4",
     "webpack": "^1.13.1"
   },
   "jest": {
