--- a/manifest.json
+++ b/manifest.json
@@ -83,6 +83,11 @@
             "options" : {
               "loadOptions" : "/fields-account"
             }
+          },
+          "overwrite" : {
+            "type" : "boolean",
+            "title" : "overwrite",
+            "default" : false
           }
         },
         "required" : [
