--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "yarn run clean && yarn run build:server",
     "build:server": "babel server -d build",
     "clean": "rimraf build",
-    "test": "yarn run test:lint && yarn run test:integration && yarn run test:unit && yarn run test:manifest",
+    "test": "yarn run test:lint && yarn run test:combined && yarn run test:manifest",
+    "test:combined": "NODE_ENV=test jest ./test",
     "test:unit": "NODE_ENV=test jest ./test/unit",
     "test:integration": "NODE_ENV=test jest ./test/integration",
     "test:flow": "flow check",
