Upgrade hull-node, add more flow types and small deps cleanup

--- a/package.json
+++ b/package.json
@@ -43,21 +43,18 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-flow": "^6.23.0",
     "bluebird": "^3.5.1",
     "bottleneck": "^1.16.0",
     "cache-manager": "^2.5.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "hogan.js": "^3.0.2",
-    "hull": "^0.13.6",
+    "hull": "0.13.9",
     "jayson": "^2.0.4",
     "json-rpc2": "^1.0.2",
     "lodash": "^4.17.4",
     "lru-cache": "^4.1.1",
     "newrelic": "^2.4.1",
-    "request": "^2.72.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
