--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "json-rpc2": "^1.0.2",
     "lodash": "^4.17.4",
     "lru-cache": "^4.1.1",
+    "moment": "^2.19.4",
     "newrelic": "^2.4.1",
     "uuid": "^3.1.0"
   },
