Fix templating and add more filtering

--- a/manifest.json
+++ b/manifest.json
@@ -84,6 +84,16 @@
               "loadOptions" : "/fields-account"
             }
           },
+          "hull_field_template": {
+            "type": "string",
+            "title": "Template",
+            "format": "liquid",
+            "options": {
+              "help": "Use this editor to set outgoing attribute value, this overwrites Hull Attribute actual value",
+              "edit_label": "Edit value template",
+              "type": "none"
+            }
+          },
           "overwrite" : {
             "type" : "boolean",
             "title" : "overwrite",
@@ -91,7 +101,6 @@
           }
         },
         "required" : [
-          "hull_field_name",
           "nutshell_field_name"
         ]
       }
@@ -127,10 +136,19 @@
             "options" : {
               "loadOptions" : "/fields-contact"
             }
+          },
+          "hull_field_template": {
+            "type": "string",
+            "title": "Template",
+            "format": "liquid",
+            "options": {
+              "help": "Use this editor to set outgoing attribute value, this overwrites Hull Attribute actual value",
+              "edit_label": "Edit value template",
+              "type": "none"
+            }
           }
         },
         "required" : [
-          "hull_field_name",
           "nutshell_field_name"
         ]
       }
