--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,8 @@
   "tags": ["outgoing","batch", "oneColumn", "smart-notifier"],
   "description" : "Send Users as Leads or Contacts to Nutshell with custom mappings",
   "version" : "0.3.0",
+  "source": "nutshell",
+  "logo": "logo.png",
   "picture": "picture.png",
   "ui": false,
   "readme" : "readme.md",
