--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:8.9.1
+      - image: circleci/node:8.10
     working_directory: ~/repo
 
     steps:
@@ -29,4 +29,4 @@ jobs:
       # run tests!
       - run: yarn test
       # deactivate until we have figured out the hull-node version
-      # - run: ./node_modules/.bin/hull-connector-tester
+      - run: npm i --no-save --no-cache hull-connector-tester@latest && ./node_modules/.bin/hull-connector-tester
