--- a/package.json
+++ b/package.json
@@ -7,21 +7,20 @@
     "build": "yarn run clean && yarn run build:server",
     "build:server": "babel server -d build",
     "clean": "rimraf build",
-    "test": "yarn run test:lint && yarn run test:combined && yarn run test:manifest",
+    "test": "yarn run test:lint && yarn run test:combined",
     "test:combined": "NODE_ENV=test jest ./test",
     "test:unit": "NODE_ENV=test jest ./test/unit",
     "test:integration": "NODE_ENV=test jest ./test/integration",
     "test:flow": "flow check",
-    "test:lint": "./node_modules/.bin/eslint server",
-    "test:manifest": "jsonlint manifest.json -q",
+    "test:lint": "eslint server",
     "start": "node -r newrelic build",
     "start:dev": "NODE_ENV=development babel-watch -L server",
     "postinstall": "yarn run build"
   },
   "engines": {
-    "node": "8.9.x",
-    "npm": "5.5.x",
-    "yarn": "1.3.x"
+    "node": "8.10.x",
+    "npm": "5.6.x",
+    "yarn": "1.5.x"
   },
   "repository": {
     "type": "git",
@@ -49,7 +48,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "hogan.js": "^3.0.2",
-    "hull": "0.13.10",
+    "hull": "0.13.14",
     "jayson": "^2.0.4",
     "json-rpc2": "^1.0.2",
     "lodash": "^4.17.4",
@@ -69,9 +68,7 @@
     "eslint-plugin-import": "^2.8.0",
     "flow-bin": "^0.59.0",
     "flow-typed": "^2.2.3",
-    "hull-connector-tester": "^0.0.1",
     "jest": "^21.2.1",
-    "jsonlint": "^1.6.2",
     "nock": "^9.1.3",
     "rimraf": "^2.5.4",
     "webpack": "^1.13.1"
