--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "hull-ship"
   ],
   "engines": {
-    "node": "8.11.x",
+    "node": "^10.x",
     "npm": "5.6.x",
-    "yarn": "1.6.x"
+    "yarn": "^1.22.x"
   },
   "scripts": {
     "build": "yarn run clean && yarn run build:server",
@@ -39,38 +39,38 @@
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "bluebird": "^3.5.1",
+    "bluebird": "^3.7.2",
     "bottleneck": "^1.16.0",
-    "cache-manager": "^2.5.0",
-    "cors": "^2.8.4",
-    "express": "^4.16.2",
+    "cache-manager": "^2.11.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "hogan.js": "^3.0.2",
-    "hull": "0.13.16",
-    "jayson": "^2.0.4",
+    "hull": "^0.13.23",
+    "jayson": "^2.1.2",
     "json-rpc2": "^1.0.2",
-    "lodash": "^4.17.4",
-    "lru-cache": "^4.1.1",
-    "moment": "^2.19.4",
-    "newrelic": "^2.4.1",
-    "uuid": "^3.1.0"
+    "lodash": "^4.17.21",
+    "lru-cache": "^4.1.5",
+    "moment": "^2.29.1",
+    "newrelic": "^7.1.1",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
     "babel-jest": "^21.2.0",
-    "babel-watch": "^2.0.7",
-    "eslint": "^4.10.0",
+    "babel-watch": "^2.0.8",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-flowtype": "^2.39.1",
-    "eslint-plugin-flowtype-errors": "^3.3.6",
-    "eslint-plugin-import": "^2.8.0",
-    "flow-bin": "^0.59.0",
-    "flow-typed": "^2.2.3",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-flowtype-errors": "^3.6.0",
+    "eslint-plugin-import": "^2.22.1",
+    "flow-bin": "^0.145.0",
+    "flow-typed": "^2.6.2",
     "jest": "^21.2.1",
-    "nock": "^9.1.3",
-    "rimraf": "^2.5.4",
-    "webpack": "^1.13.1"
+    "nock": "^9.6.1",
+    "rimraf": "^2.7.1",
+    "webpack": "^1.15.0"
   },
   "jest": {
     "collectCoverage": true,
